--- a/Trap-Guessing-Game/css/style.css
+++ b/Trap-Guessing-Game/css/style.css
@@ -4,10 +4,18 @@ body{
 background-color: #00134D;
 }
 
-#phase{
-  text-align:center;
-   color:white;
-  margin-bottom:20px;
+.controlmassage {
+    margin-top: 20px;
+    text-align: center;
+}
+
+#phase {
+    color: white;
+    font-size: 24px;   
+    margin-bottom: 20px;
+    background: none;  
+    padding: 0;        
+    text-align: center;
 }
 
 /* part one players */
